another attempt to fix orientation on mobile

--- a/src/app/components/canvas/canvas.component.css
+++ b/src/app/components/canvas/canvas.component.css
@@ -1,3 +1,8 @@
 
 .canvas {
+    image-orientation: from-image;
+}
+
+img {
+    image-orientation: from-image;
 }
